--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SlideShow</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello There</h1>
+    <h1>Slideshow</h1>
+    <div class="container">
+      <img src="./images/bob-brewer-aUF0M9jdnUg-unsplash.jpeg" alt="" />
+    </div>
+    <div class="button">
+      <button class="start">Start</button>
+      <button class="stop">Stop</button>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
